--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,9 @@ board = esp12e
 framework = arduino
 monitor_speed = 115200
 lib_extra_dirs = C:\Users\Neutrino\Documents\Arduino\libraries
+lib_deps = 
+	adafruit/Adafruit MPU6050@^2.2.4
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
+	paulstoffregen/Time@^1.6.1
+	tzapu/WiFiManager@^0.16.0
+	xreef/EMailSender@^3.0.8
